metadata/force-app/main/default/objects/CustomName_Zrust__c/CustomName_Zrust__c.object-meta.xml
<CustomObject>
    <description>Description_fiTyI</description>
    <label>CustomLabel_jBuoZ</label>
    <nameField>
        <label>CustomLabel_jBuoZ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_jBuoZs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>