metadata/force-app/main/default/objects/CustomName_Zrust__c/fields/CustomField_NYlZW__c.field-meta.xml
<CustomField>
    <fullName>CustomField_NYlZW__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldjrbxL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>