metadata/force-app/main/default/objects/CustomName_Zrust__c/fields/CustomField_SKvkU__c.field-meta.xml
<CustomField>
    <fullName>CustomField_SKvkU__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldIFklC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>